lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:5: error: type List takes type parameters
  	val Liste:List = getSol()
                  ^Lander:16: error: not enough arguments for method goToFlat: (a: Double, b: Double)Unit.
Unspecified value parameters a, b.
  	goToFlat()
                ^Lander:17: error: not enough arguments for method descend: (sol: Int)Unit.
Unspecified value parameter sol.
  	descend()
               ^Lander:23: error: value =- is not a member of Int
		sens=-1
                    ^Lander:31: error: not found: value setAngle
			setAngle(sens*(-45))
                        ^Lander:43: error: not found: value setAngle
		setAngle(0)
                ^